sample-on-prem-ha-yamls/onprem-ha-deployment.yaml
# Copyright Sonatype, Inc., 2022, All Rights Reserved.
#
# Note: This YAML file is just an example and cannot be used as-is.
# You must fill it out with the appropriate information for your deployment to be able to use it.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nxrm-deployment
  namespace: nxrm
  labels:
    app: nxrm
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nxrm
  template:
    metadata:
      labels:
        app: nxrm
    spec:
      initContainers:
        - name: chown-nexusdata-owner-to-nexus
          image: busybox:1.33.1
          command: [/bin/sh]
          args:
            - -c
            - >-
              chown -R '200:200' /nexus-data &&
              chown -R '200:200' /blobs
          volumeMounts:
            - name: nexusdata
              mountPath: /nexus-data
            - name: nfs-blob-storage
              mountPath: /blobs
      containers:
        - name: nxrm-app
          image: sonatype/nexus3:3.50.0
          securityContext:
            runAsUser: 200
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          env:
            - name: DB_NAME
              value: <db-name>
            - name: DB_USER
              value: <db-user>
            - name: DB_PASSWORD
              value: <db-password>
            - name: LICENSE_FILE
              value: /etc/nxrm-license/nxrm-license.lic
            - name: NEXUS_SECURITY_INITIAL_PASSWORD
              value: <yournexusadminpassword>
            - name: NEXUS_SEARCH_INDEX_REBUILD_ON_STARTUP
              value: "true"
            - name: INSTALL4J_ADD_VM_PARAMS
              value: "-Xms2703m -Xmx2703m -XX:MaxDirectMemorySize=2703m \
          -Dnexus.licenseFile=${LICENSE_FILE} \
          -Dnexus.datastore.clustered.enabled=true \
          -Djava.util.prefs.userRoot=${NEXUS_DATA}/javaprefs \
          -Dnexus.datastore.nexus.jdbcUrl=jdbc:postgresql://postgres_url:5432/${DB_NAME} \
          -Dnexus.datastore.nexus.username=${DB_USER} \
          -Dnexus.datastore.nexus.password=${DB_PASSWORD}"
          volumeMounts:
            - name: nexusdata
              mountPath: /nexus-data
            - name: nfs-blob-storage
              mountPath: /blobs
            - name: license-volume
              mountPath: /etc/nxrm-license

      volumes:
        - name: nexusdata
          persistentVolumeClaim:
            claimName: local-disk-claim
        - name: nfs-blob-storage
          persistentVolumeClaim:
            claimName: nfs-blobstorage-claim
        - name: license-volume
          configMap:
            name: nxrm-license
