sample-on-prem-ha-yamls/onporem-ha-docker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nxrm-docker-service
  namespace: nxrm
  labels:
    app: nxrm
spec:
  type: NodePort
  selector:
    app: nxrm
  ports:
      protocol: TCP
      port: 9090
      targetPort: 8081
