sample-on-prem-ha-yamls/onprem-ha-docker-service.yaml
# Copyright Sonatype, Inc., 2022, All Rights Reserved.
#
# In the following YAML, <scheme> should typically be set to internal.
#
# Note: This YAML file is just an example and cannot be used as-is.
# You must fill it out with the appropriate information for your deployment to be able to use it.
# Please ignore this file if you don't use docker repositories or if you'll be Nexus Repository's docker subdomain feature
# or reverse proxy for your docker repositories.

apiVersion: v1
kind: Service
metadata:
  name: nxrm-docker-service
  namespace: nxrm
  labels:
    app: nxrm
spec:
  type: NodePort
  selector:
    app: nxrm
  ports:
      protocol: TCP
      port: 9090
      targetPort: 8081
