sample-on-prem-ha-yamls/onprem-ha-docker-ingress.yaml
# Copyright Sonatype, Inc., 2022, All Rights Reserved.
#
# In the following YAML, <scheme> should typically be set to internal.
#
# Note: This YAML file is just an example and cannot be used as-is.
# You must fill it out with the appropriate information for your deployment to be able to use it.
# Please ignore this file if you don't use docker repositories or if you'll be Nexus Repository's docker subdomain feature
# or reverse proxy for your docker repositories.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nxrm
  name: nxrm-docker-ingress
  annotations:
    kubernetes.io/ingress.class: nginx #Add more annotations as needed
spec:
  rules:
    - host: example.com #comment out if not using https for load balancer
      http:
    paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nxrm-docker-service
            port:
              number: 9090
