sample-on-prem-ha-yamls/onprem-ha-ingress.yaml
  # Copyright Sonatype, Inc., 2022, All Rights Reserved.
  #
  # Note: This YAML file is just an example and cannot be used as-is.
  # You must fill it out with the appropriate information for your deployment to be able to use it.

  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    namespace: nxrm
    name: nxrm-ingress
    annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
  spec:
    rules:
      - host: example.com #comment out if not using https for load balancer
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: nxrm-service
                  port:
                    number: 80
